--- a/assets/main.css
+++ b/assets/main.css
@@ -9,7 +9,7 @@
 }
 
 .content{
-  width: 70%;
+  width: 75%;
   height: 100%;
   background: white;
   font-family: 'Rubik', sans-serif;
@@ -20,7 +20,7 @@
 }
 
 .options{
-  font-family: 'Boogaloo', cursive;
+  font-family: 'Pacifico', cursive;
   font-size: 28px;
   display: flex;
   justify-content: space-between;
@@ -29,14 +29,15 @@
 }
 
 .options > li{
-  width: 30%;
+  width: 25%;
 }
 
 .nav-options{
   display: flex;
-  justify-content: space-between;
-  width: 70%;
+  justify-content: space-around;
+  width: 65%;
   padding: 10px;
+  margin-right: 40px;
 }
 
 .nav-options > li{
@@ -132,7 +133,7 @@
 .developer{
   display: flex;
   justify-content: space-between;
-  width: 70%;
+  width: 75%;
   background: white;
   font-family: 'Rubik', sans-serif;
   text-align: center;
